# MCP-Optimization-Demo

./: .gitignore  README.md  client.py  idea.md  instructions.md  optimization_server.py  pyproject.toml  robot_server.py  run.sh  run_web.sh  setup.sh  web_server.py
static/css/: style.css
static/js/: dashboard.js
templates/: index.html
