[project]
name = "auth-setting-app-laughing-tribble"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "fastmcp[cli]>=2.9.2",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
